api-java-blocking-io/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-java-blocking
  labels:
    app: api-java-blocking
spec:
  selector:
    matchLabels:
      app: api-java-blocking
  replicas: 1
  template:
    metadata:
      labels:
        app: api-java-blocking
    spec:
      containers:
        - name: api-java-blocking
          image: api_java_blocking
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 20
            timeoutSeconds: 10
